Cambios en el main, titulos y se agrego paginación a categoria 1 y 2

--- a/pages/categoria2.html
+++ b/pages/categoria2.html
@@ -22,7 +22,7 @@
       href="../img/logo-empresa.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Zapatillas</title>
   </head>
   <body>
     <header>
@@ -132,20 +132,18 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a class="dropdown-item" href="categoria1.html"
-                      >Zapatillas</a
-                    >
+                    <a class="dropdown-item" href="categoria1.html">Remeras</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="categoria2.html"
-                      >Pantalones</a
+                      >Zapatillas</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Buzos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="error404.html">Remeras</a>
+                    <a class="dropdown-item" href="error404.html">Pantalones</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Accesorios</a>
@@ -225,9 +223,8 @@
           </div>
         </div>
         <h6>
-          Encontrá zapatos para todos los estilos, deporte,
-          entrenamiento o para lucir a la moda con toda la comodidad que
-          necesitás.
+          Encontrá zapatos para todos los estilos, deporte, entrenamiento o para
+          lucir a la moda con toda la comodidad que necesitás.
         </h6>
         <div class="line-vertical"></div>
       </div>
@@ -245,9 +242,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$149.999</h5>
-              <p class="card-text">
-              Zapatillas Forum 84 Low ADV
-              </p>
+              <p class="card-text">Zapatillas Forum 84 Low ADV</p>
               <p class="text-secondary">Hombre originals</p>
               <!-- Button trigger modal -->
               <button
@@ -314,7 +309,11 @@
                       </div>
                     </div>
                     <div class="modal-footer justify-content-center">
-                      <a href="./detalleproducto1.html" class="btn bg-primary text-white">Comprar</a>
+                      <a
+                        href="./detalleproducto1.html"
+                        class="btn bg-primary text-white"
+                        >Comprar</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -331,9 +330,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$179.999</h5>
-              <p class="card-text">
-                Zapatillas Sambae
-              </p>
+              <p class="card-text">Zapatillas Sambae</p>
               <p class="text-secondary">Mujer originals</p>
               <!-- Button trigger modal -->
               <button
@@ -400,7 +397,11 @@
                       </div>
                     </div>
                     <div class="modal-footer justify-content-center">
-                      <a href="./detalleproducto2.html" class="btn bg-primary text-white">Comprar</a>
+                      <a
+                        href="./detalleproducto2.html"
+                        class="btn bg-primary text-white"
+                        >Comprar</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -417,9 +418,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$149.999</h5>
-              <p class="card-text">
-               Zapatillas Tokyo
-              </p>
+              <p class="card-text">Zapatillas Tokyo</p>
               <p class="text-secondary">Mujer originals</p>
               <!-- Button trigger modal -->
               <button
@@ -505,9 +504,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$179.999</h5>
-              <p class="card-text">
-              Zapatillas Campus años 2000
-              </p>
+              <p class="card-text">Zapatillas Campus años 2000</p>
               <p class="text-secondary">Mujer originals</p>
               <!-- Button trigger modal -->
               <button
@@ -593,9 +590,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$134.999</h5>
-              <p class="card-text">
-                Zapatillas Samba OG
-              </p>
+              <p class="card-text">Zapatillas Samba OG</p>
               <p class="text-secondary">Origials</p>
               <!-- Button trigger modal -->
               <button
@@ -681,9 +676,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$169.999</h5>
-              <p class="card-text">
-                Zapatillas Campus Rosas 00S
-              </p>
+              <p class="card-text">Zapatillas Campus Rosas 00S</p>
               <p class="text-secondary">Mujer Originals</p>
               <!-- Button trigger modal -->
               <button
@@ -768,9 +761,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">$179.999</h5>
-              <p class="card-text">
-                Zapatilla Superstar
-              </p>
+              <p class="card-text">Zapatilla Superstar</p>
               <p class="text-secondary">Originals</p>
               <!-- Button trigger modal -->
               <button
@@ -856,9 +847,7 @@
             </div>
             <div class="card-body text-center">
               <h5 class="card-title">149.999</h5>
-              <p class="card-text">
-                Zapatillas Forum Low CL
-              </p>
+              <p class="card-text">Zapatillas Forum Low CL</p>
               <p class="text-secondary">Originals</p>
               <!-- Button trigger modal -->
               <button
@@ -936,76 +925,188 @@
           </div>
         </div>
       </section>
+      <section class="container d-flex justify-content-center">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">Anterior</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link active" href="../pages/categoria2.html">1</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">Siguiente</a>
+            </li>
+          </ul>
+        </nav>
+      </section>
 
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: none;">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Ingresá a tu cuenta</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <article class="row">
-                            <div class="col-12 col-md-6">
-                               <form>
-                                <div class="mb-3">
-                                    <label for="email" class="col-form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Ingresá tu Email">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="password" class="col-form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="password" placeholder="Ingresá tu Contraseña">
-                                </div>
-                                </form>
-                                <button type="button" class="btn btn-link mb-3" data-bs-target="#exampleModal2" data-bs-toggle="modal">Olvidé mi Contraseña</button> 
-                                
-                                <a href="/pages/registro.html" class="btn btn-link mb-3">No tienes una cuenta?</a>
-
-                                <a href="/pages/error404.html" class="btn btn-light border d-flex align-items-center gap-2 mb-3">
-                                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" width="20" height="20">
-                                    Iniciar sesión con Google
-                                </a>
-
-                                <a href="/pages/error404.html" class="btn btn-primary d-flex align-items-center gap-2 mb-3" style="background-color: #1877F2; border-color: #1877F2;">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" 
-                                        alt="Facebook" width="20" height="20">
-                                    Iniciar sesión con Facebook
-                                </a>
-                            </div>
-                            
-                            <div class="col-12 col-md-6">
-                                <img src="/img/Classic-Skater-for-Guys_600x600.webp" alt="Chico en skate" class="rounded-3 img-fluid">
-                            </div>
-                        </article>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="/pages/error404.html" class="btn btn-primary">Ingresar</a>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-                    </div>
-                </div>
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+        style="display: none"
+      >
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">
+                Ingresá a tu cuenta
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
             </div>
-        </div>
+            <div class="modal-body">
+              <article class="row">
+                <div class="col-12 col-md-6">
+                  <form>
+                    <div class="mb-3">
+                      <label for="email" class="col-form-label">Email</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        placeholder="Ingresá tu Email"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label for="password" class="col-form-label"
+                        >Contraseña</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        placeholder="Ingresá tu Contraseña"
+                      />
+                    </div>
+                  </form>
+                  <button
+                    type="button"
+                    class="btn btn-link mb-3"
+                    data-bs-target="#exampleModal2"
+                    data-bs-toggle="modal"
+                  >
+                    Olvidé mi Contraseña
+                  </button>
 
-        <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true" style="display: none;">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel2">Recuperá tu Contraseña</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="mb-3">
-                            <label for="email" class="col-form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Ingresá tu Email">
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="/pages/error404.html" class="btn btn-primary">Recuperar</a>
-                        <button type="button" class="btn btn-secondary" data-bs-target="#exampleModal" data-bs-toggle="modal">Volver</button>
-                    </div>
+                  <a href="/pages/registro.html" class="btn btn-link mb-3"
+                    >No tienes una cuenta?</a
+                  >
+
+                  <a
+                    href="/pages/error404.html"
+                    class="btn btn-light border d-flex align-items-center gap-2 mb-3"
+                  >
+                    <img
+                      src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
+                      alt="Google"
+                      width="20"
+                      height="20"
+                    />
+                    Iniciar sesión con Google
+                  </a>
+
+                  <a
+                    href="/pages/error404.html"
+                    class="btn btn-primary d-flex align-items-center gap-2 mb-3"
+                    style="background-color: #1877f2; border-color: #1877f2"
+                  >
+                    <img
+                      src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png"
+                      alt="Facebook"
+                      width="20"
+                      height="20"
+                    />
+                    Iniciar sesión con Facebook
+                  </a>
                 </div>
+
+                <div class="col-12 col-md-6">
+                  <img
+                    src="/img/Classic-Skater-for-Guys_600x600.webp"
+                    alt="Chico en skate"
+                    class="rounded-3 img-fluid"
+                  />
+                </div>
+              </article>
             </div>
+            <div class="modal-footer">
+              <a href="/pages/error404.html" class="btn btn-primary"
+                >Ingresar</a
+              >
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Salir
+              </button>
+            </div>
+          </div>
         </div>
+      </div>
+
+      <div
+        class="modal fade"
+        id="exampleModal2"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel2"
+        aria-hidden="true"
+        style="display: none"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel2">
+                Recuperá tu Contraseña
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="mb-3">
+                <label for="email" class="col-form-label">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Ingresá tu Email"
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <a href="/pages/error404.html" class="btn btn-primary"
+                >Recuperar</a
+              >
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-target="#exampleModal"
+                data-bs-toggle="modal"
+              >
+                Volver
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="bg-dark">
       <section class="container">
