--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -123,19 +123,19 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a class="dropdown-item" href="categoria1.html"
-                      >Zapatillas</a
+                      >Remeras</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="categoria2.html"
-                      >Pantalones</a
+                      >Zapatillas</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Buzos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="error404.html">Remeras</a>
+                    <a class="dropdown-item" href="error404.html">Pantalones</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Accesorios</a>
