--- a/pages/categoria1.html
+++ b/pages/categoria1.html
@@ -22,7 +22,7 @@
       href="../img/logo-empresa.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Remeras</title>
   </head>
   <body>
     <header>
@@ -133,19 +133,19 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a class="dropdown-item" href="categoria1.html"
-                      >Zapatillas</a
+                      >Remeras</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="categoria2.html"
-                      >Pantalones</a
+                      >Zapatillas</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Buzos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="error404.html">Remeras</a>
+                    <a class="dropdown-item" href="error404.html">Pantalones</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Accesorios</a>
@@ -426,6 +426,27 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="container d-flex justify-content-center">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">Anterior</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link active" href="../pages/categoria1.html">1</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="../pages/error404.html">Siguiente</a>
+            </li>
+          </ul>
+        </nav>
       </section>
 
       <div
