--- a/pages/detalleproducto2.html
+++ b/pages/detalleproducto2.html
@@ -22,7 +22,7 @@
       href="../img/logo-empresa.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Zapatilla Samba</title>
   </head>
   <body>
     <header>
@@ -133,19 +133,19 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a class="dropdown-item" href="categoria1.html"
-                      >Zapatillas</a
+                      >Remeras</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="categoria2.html"
-                      >Pantalones</a
+                      >Zapatillas</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Buzos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="error404.html">Remeras</a>
+                    <a class="dropdown-item" href="error404.html">Pantalones</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Accesorios</a>
@@ -225,7 +225,7 @@
     <!-- Detalles -->
     <div class="col-md-5">
       <h5 class="text-muted">Nuevo | +1000 vendidos</h5>
-      <h3 class="fw-bold">Zapatillas Sambae</h3>
+      <h3 class="fw-bold">Zapatillas Samba</h3>
       <div class="mb-2">
         ⭐⭐⭐⭐☆ <span class="text-muted">(1141)</span>
       </div>
@@ -554,7 +554,7 @@
         </div>
       </section>
     </footer>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script>
   function changeImage(img) {
     let mainImage = document.getElementById("mainImage");
