--- a/pages/detalleproducto4.html
+++ b/pages/detalleproducto4.html
@@ -22,7 +22,7 @@
       href="../img/logo-empresa.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Remera Rip Curl RC</title>
   </head>
   <body>
     <header>
@@ -133,19 +133,19 @@
                 <ul class="dropdown-menu">
                   <li>
                     <a class="dropdown-item" href="categoria1.html"
-                      >Zapatillas</a
+                      >Remeras</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="categoria2.html"
-                      >Pantalones</a
+                      >Zapatillas</a
                     >
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Buzos</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="error404.html">Remeras</a>
+                    <a class="dropdown-item" href="error404.html">Pantalones</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="error404.html">Accesorios</a>
@@ -669,7 +669,7 @@
         </div>
       </section>
     </footer>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script>
   function changeImage(img) {
     let mainImage = document.getElementById("mainImage");
