--- a/index.html
+++ b/index.html
@@ -340,21 +340,37 @@
             Elegí tu estilo y explorá nuestros productos
           </p>
         </div>
-<div class="carousel-item">
-        <img src="./img/remera-estampada-nf.jpg" class="d-block w-100 object-cover" alt="Remera estampada">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Remera estampada North Face</h5>
-          <p>100% algodón premium</p>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#homeCarousel" data-bs-slide="prev" aria-label="Slide anterior">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#homeCarousel" data-bs-slide="next" aria-label="Slide siguiente">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </button>
-  </div>
-</section>
-
+        <div class="carousel-item">
+          <img
+            src="./img/remera-estampada-nf.jpg"
+            class="d-block w-100 object-cover"
+            alt="Remera estampada"
+          />
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Remera estampada North Face</h5>
+            <p>100% algodón premium</p>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#homeCarousel"
+            data-bs-slide="prev"
+            aria-label="Slide anterior"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#homeCarousel"
+            data-bs-slide="next"
+            aria-label="Slide siguiente"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          </button>
+        </div>
+      </section>
+      <section class="container my-5">
         <div class="row g-4">
           <div class="col-12 col-md-4">
             <a
@@ -476,77 +492,166 @@
         </div>
       </section>
 
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: none;">
-            <div class="modal-dialog modal-lg">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel">Ingresá a tu cuenta</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <article class="row">
-                            <div class="col-12 col-md-6">
-                               <form>
-                                <div class="mb-3">
-                                    <label for="email" class="col-form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Ingresá tu Email">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="password" class="col-form-label">Contraseña</label>
-                                    <input type="password" class="form-control" id="password" placeholder="Ingresá tu Contraseña">
-                                </div>
-                                </form>
-                                <button type="button" class="btn btn-link mb-3" data-bs-target="#exampleModal2" data-bs-toggle="modal">Olvidé mi Contraseña</button> 
-                                
-                                <a href="/pages/registro.html" class="btn btn-link mb-3">No tienes una cuenta?</a>
-
-                                <a href="/pages/error404.html" class="btn btn-light border d-flex align-items-center gap-2 mb-3">
-                                    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" width="20" height="20">
-                                    Iniciar sesión con Google
-                                </a>
-
-                                <a href="/pages/error404.html" class="btn btn-primary d-flex align-items-center gap-2 mb-3" style="background-color: #1877F2; border-color: #1877F2;">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" 
-                                        alt="Facebook" width="20" height="20">
-                                    Iniciar sesión con Facebook
-                                </a>
-                            </div>
-                            
-                            <div class="col-12 col-md-6">
-                                <img src="/img/Classic-Skater-for-Guys_600x600.webp" alt="Chico en skate" class="rounded-3 img-fluid">
-                            </div>
-                        </article>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="/pages/error404.html" class="btn btn-primary">Ingresar</a>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Salir</button>
-                    </div>
-                </div>
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+        style="display: none"
+      >
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">
+                Ingresá a tu cuenta
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
             </div>
-        </div>
+            <div class="modal-body">
+              <article class="row">
+                <div class="col-12 col-md-6">
+                  <form>
+                    <div class="mb-3">
+                      <label for="email" class="col-form-label">Email</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        placeholder="Ingresá tu Email"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label for="password" class="col-form-label"
+                        >Contraseña</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        placeholder="Ingresá tu Contraseña"
+                      />
+                    </div>
+                  </form>
+                  <button
+                    type="button"
+                    class="btn btn-link mb-3"
+                    data-bs-target="#exampleModal2"
+                    data-bs-toggle="modal"
+                  >
+                    Olvidé mi Contraseña
+                  </button>
 
-        <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true" style="display: none;">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="exampleModalLabel2">Recuperá tu Contraseña</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="mb-3">
-                            <label for="email" class="col-form-label">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Ingresá tu Email">
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <a href="/pages/error404.html" class="btn btn-primary">Recuperar</a>
-                        <button type="button" class="btn btn-secondary" data-bs-target="#exampleModal" data-bs-toggle="modal">Volver</button>
-                    </div>
+                  <a href="/pages/registro.html" class="btn btn-link mb-3"
+                    >No tienes una cuenta?</a
+                  >
+
+                  <a
+                    href="/pages/error404.html"
+                    class="btn btn-light border d-flex align-items-center gap-2 mb-3"
+                  >
+                    <img
+                      src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg"
+                      alt="Google"
+                      width="20"
+                      height="20"
+                    />
+                    Iniciar sesión con Google
+                  </a>
+
+                  <a
+                    href="/pages/error404.html"
+                    class="btn btn-primary d-flex align-items-center gap-2 mb-3"
+                    style="background-color: #1877f2; border-color: #1877f2"
+                  >
+                    <img
+                      src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png"
+                      alt="Facebook"
+                      width="20"
+                      height="20"
+                    />
+                    Iniciar sesión con Facebook
+                  </a>
                 </div>
+
+                <div class="col-12 col-md-6">
+                  <img
+                    src="/img/Classic-Skater-for-Guys_600x600.webp"
+                    alt="Chico en skate"
+                    class="rounded-3 img-fluid"
+                  />
+                </div>
+              </article>
             </div>
+            <div class="modal-footer">
+              <a href="/pages/error404.html" class="btn btn-primary"
+                >Ingresar</a
+              >
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Salir
+              </button>
+            </div>
+          </div>
         </div>
+      </div>
 
-
+      <div
+        class="modal fade"
+        id="exampleModal2"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel2"
+        aria-hidden="true"
+        style="display: none"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel2">
+                Recuperá tu Contraseña
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="mb-3">
+                <label for="email" class="col-form-label">Email</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  placeholder="Ingresá tu Email"
+                />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <a href="/pages/error404.html" class="btn btn-primary"
+                >Recuperar</a
+              >
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-target="#exampleModal"
+                data-bs-toggle="modal"
+              >
+                Volver
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="bg-dark">
       <section class="container">
